@@ -133,7 +133,8 @@ public class ElementLibrary implements Iterable<ElementLibrary.ElementContainer>
                         .add(Multiplexer.DESCRIPTION)
                         .add(Demultiplexer.DESCRIPTION)
                         .add(Decoder.DESCRIPTION)
-                        .add(BitSelector.DESCRIPTION))
+                        .add(BitSelector.DESCRIPTION)
+                        .add(PriorityEncoder.DESCRIPTION))
                 .add(new LibraryNode(Lang.get("lib_flipFlops"))
                         .add(FlipflopRSAsync.DESCRIPTION)
                         .add(FlipflopRS.DESCRIPTION)
